made button changes

--- a/app/views/announcements/index.html.erb
+++ b/app/views/announcements/index.html.erb
@@ -7,7 +7,7 @@
 <% if current_user && current_user.admin %>
 
     <div class="createButtonContainer">
-        <div class="btn btn-outline-secondary">
+        <div class="btn btn-outline-secondary new-btn">
             <%= link_to 'New Announcement', new_announcement_path , :class => "btn newMerchandise"  %>
         </div>
     </div>
