--- a/app/views/merches/index.html.erb
+++ b/app/views/merches/index.html.erb
@@ -6,7 +6,7 @@
 <% if current_user && current_user.admin %>
 
     <div class="createButtonContainer">
-        <div class="btn btn-outline-secondary">
+        <div class="btn btn-outline-secondary new-btn">
             <%= link_to 'New Merchandise', new_merch_path, :class => "btn newMerchandise"  %>
         </div>
     </div>
