--- a/app/views/ann_mailer/ann_created.html.erb
+++ b/app/views/ann_mailer/ann_created.html.erb
@@ -1,3 +1,3 @@
-<h1>New Announcement!</h1>
+<h1 class = "profile_h">New Announcement!</h1>
 
 <%= @user.email %> posted an Announcement: <%= @announcement.title %>
