--- a/app/views/announcements/_form2.html.erb
+++ b/app/views/announcements/_form2.html.erb
@@ -14,10 +14,10 @@
     </div>
   <% end %>
 
-  <h1 class = "etoa_title"> Does the Announcement for this Event look OK? </h1>
+  <h1 class = "profile_h" style="margin-top:40px">Does the Announcement for this Event look OK?</h1>
 
   <div class="card" style="border-color:#913031; margin:20vh; margin-top:50px;">
-  <div class="card-body">
+  <div class="card-body" >
   
   
   <div class="field">
@@ -34,12 +34,11 @@
       <div class="actions" style="margin-top:20px">
         <div style="display:flex;">
           <div style="width:33%; margin-left: 0vw"> 
-            <%= link_to 'Back', announcements_path, class: "btn btn-outline-secondary newMerchandise"  %>
+            <%= button_to 'Back', announcements_path, class: "btn btn-outline-secondary newMerchandise", data: { confirm: "Are you sure you want to lose your progress?" }  %>
           </div>
           <div style="width:33%; justify-content:center; display:flex"> 
             <%= form.submit "Submit", class: "btn btn-outline-secondary newMerchandise"  %>
           </div>
-          <div style="width:33%"> </div>
 
 
         </div>
