--- a/app/views/announcements/new.html.erb
+++ b/app/views/announcements/new.html.erb
@@ -2,9 +2,7 @@
 
 <%= render 'form2', announcement: @announcement %>
 <% else %>
-<h1 style="margin-left:40px; margin-top:40px;">New Announcement</h1>
+<h1 class = "profile_h">New Announcement</h1>
 
 <%= render 'form', announcement: @announcement %>
 <% end %>
-
-<%= link_to 'Back', announcements_path %>
