--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -6,7 +6,7 @@
  <% if current_user && current_user.admin %>
 
      <div class="createButtonContainer">
-       <div class="btn btn-outline-secondary">
+       <div class="btn btn-outline-secondary new-btn">
            <%= link_to 'New Event', new_event_path, :class => "btn newMerchandise"  %>
        </div>
      </div>
