--- a/app/assets/stylesheets/pages.scss
+++ b/app/assets/stylesheets/pages.scss
@@ -77,6 +77,8 @@ h2 {
 .announcementCardBody {
     padding: 25px;
     display: flex;
+    height: 65%;
+    align-items: center;
 }
 
 .announcementCardBody1 {
