--- a/app/views/merches/index.html.erb
+++ b/app/views/merches/index.html.erb
@@ -2,6 +2,7 @@
 
 <h1  class = "profile_h" style="margin-top:40px">Merchandise</h1>
 
+<div>
 
 <% if current_user && current_user.admin %>
 
@@ -78,35 +79,10 @@
     <% end %>
 </div>
 
- <div style="height:50vh"></div>
-
-<table>
-    <thead>
-        <tr>
-            <th>Product</th>
-            <th>Price</th>
-            <th>Link</th>
-            <th colspan="3"></th>
-        </tr>
-    </thead>
-
-    <tbody>
-        <% @merches.each do |merch| %>
-            <tr>
-                <td><%= merch.name %></td>
-                <td><%= merch.price %></td>
-                <td><%= link_to merch.link, merch.link %></td>
-                <td><%= link_to 'Show', merch %></td>
-                <% if current_user && current_user.admin %>
-                    <td><%= link_to 'Edit', edit_merch_path(merch) %></td>
-                    <td><%= link_to 'Destroy', merch, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-                <% end %>
-            </tr>
-        <% end %>
-    </tbody>
-    
-</table>
+<div style="height:50vh;"></div>
+<div style="height:50vh;"></div>
 
 
-<br>
+
+</div>
 
