need to slice strings

--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -58,8 +58,9 @@
                      <div class="merchCardBody1" style="display:flex;">
                        <div style="width:50%; padding:10px">
                            <Strong>Date: </Strong>
-                               <%= @event.date %>
+                               <%= @ed.slice(1, 10) %>
                        </div>
+                       
 
                        <div style="width:50%; padding:10px">
 
