--- a/app/views/comments/_comment.html.erb
+++ b/app/views/comments/_comment.html.erb
@@ -1,5 +1,26 @@
 <article>
-  <p><%= comment.content %></p>
-  <small>by <%= comment.user.firstname%> <%= comment.user.lastname%> </small>
-</article>
+
+<div class="be-comment">
+		<div class="be-img-comment">	
+			<a href="blog-detail-2.html">
+				<img src="https://bootdey.com/img/Content/avatar/avatar1.png" alt="" class="be-ava-comment">
+			</a>
+		</div>
+		<div class="be-comment-content">
+			
+				<span class="be-comment-name">
+					<a href="blog-detail-2.html"><%= comment.user.firstname%> <%= comment.user.lastname%></a>
+					</span>
+				<span class="be-comment-time">
+					<i class="fa fa-clock-o"></i>
+					<%# May 27, 2015 at 3:14am not populated %>
+				</span>
+
+			<p class="be-comment-text">
+          <%= comment.content %>
+			</p>
+		</div>
+	</div>
+
+  </article>
 <hr />
