--- a/app/views/merches/new.html.erb
+++ b/app/views/merches/new.html.erb
@@ -1,4 +1,4 @@
-<h1  class = "profile_h">New Merchandise</h1>
+<h1 class = "profile_h x">New Merchandise</h1>
 
 <%= render 'form', merch: @merch %>
 
