--- a/app/views/announcements/edit.html.erb
+++ b/app/views/announcements/edit.html.erb
@@ -1,3 +1,3 @@
-<h1 class = "profile_h">Editing Announcement</h1>
+<h1 class = "profile_h" style="margin-top:40px">Editing Announcement</h1>
 
 <%= render 'form', announcement: @announcement %>
