--- a/app/views/events/edit.html.erb
+++ b/app/views/events/edit.html.erb
@@ -1,3 +1,3 @@
-<h1 class = "profile_h">Editing Event</h1>
+<h1 class = "profile_h" style="margin-top:40px">Editing Event</h1>
 
 <%= render 'form', event: @event %>
