--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -56,10 +56,17 @@
                        </div>
                    </div>
                      <div class="merchCardBody1" style="display:flex;">
-                       <div style="width:50%; padding:10px">
+
+                        <div style="width:50%; padding:10px">
                            <Strong>Date: </Strong>
-                               <%= @event.date %>
+                               <%= @event.date.strftime('%m-%d-%Y') %>
                        </div>
+
+                       <div style="width:50%; padding:10px">
+                           <Strong>Time: </Strong>
+                               <%= @event.date.strftime('%I:%M:%S %p') %>
+                       </div>
+                       
 
                        <div style="width:50%; padding:10px">
 
