--- a/app/views/merches/edit.html.erb
+++ b/app/views/merches/edit.html.erb
@@ -1,3 +1,3 @@
-<h1 class = "profile_h">Editing Merchandise</h1>
+<h1 class = "profile_h" style="margin-top:40px">Editing Merchandise</h1>
 
 <%= render 'form', merch: @merch %>
