event deleted 30 hours after event date

--- a/app/views/announcements/show.html.erb
+++ b/app/views/announcements/show.html.erb
@@ -40,6 +40,11 @@
                           <%= @announcement.body %>
                   </div>
 
+                  <div>
+                    <Strong>Posted on: </Strong>
+                          <%= @announcement.created_at.strftime('%m-%d-%Y') %>
+                  </div>
+
               </div>
           </div>
         </div>
